# LogT2

./: .gitignore  BRtree.cpp  CMakeLists.txt  RBTree.cpp  README.md  Result_RB_Equiprobable.txt  Result_RB_Skew.txt  Result_Splay_Equiprobable.txt  Result_Splay_Skew.txt  T2_Equiprobable.cpp  T2_Skew.cpp  Tarea2_Equiprobable.cpp  Tarea2_Skew.cpp  readmake.txt  redblacktree.cpp  redblacktree.h  splaytree.cpp  splaytree.h  terminal_outpout.txt  test2csv.cpp
Librerias/: CMakeLists.txt  redblacktree.cpp  redblacktree.h  splaytree.cpp  splaytree.h
ResultadosPipe/: Result_RB_Equiprobable.txt  Result_Splay_Equiprobable.txt  terminaloutpout.txt
devCode/: RBTree.cpp
